# EmpenhosInfo

./: .gitignore  Pipfile  README.md  TestingDownload.ipynb  app.py  pyproject.toml  requirements.txt
templates/: base.html  home.html
