[tool.poetry]
name = "empenhoinfo"
version = "0.1.0"
description = "Informações sobre empenhos, liquidações e pagamentos de despesas do governo federal, retirados diretamente do portal da transparência"
authors = ["Rafael Bruno <rafarbop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.0.2"
beautifulsoup4 = "4.10.0"
requests = "^2.27.1"
pandas = "^1.4.2"
gunicorn = "^20.1.0"
pycurl = "^7.45.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
